modify title and description

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ここにページタイトルを入力する</title>
-    <meta name="description" content="ここにディスクリプションを入力する">
+    <title>採用情報 | 株式会社Igatta Group(イガッタグループ)</title>
+    <meta name="description" content="Webマーケティングを中心にクライアントの売上向上に特化した精鋭集団、株式会社Igatta Groupの採用サイトです。">
 
     <!-- noindex -->
     <meta name="robots" content="noindex">
