ヘッダー大まかに完成

--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
 <body>
     <header class="header">
         <div class="container header__container">
-            <div class="header__ttl"></div>
+            <div class="header__ttl">
+                <a href="#" class="sitelogo">
+                    <figure class="sitelogo__img">
+                        <img src="./assets/image/igatta-recruit-logo.svg" alt="">
+                    </figure>
+                    <div class="sitelogo__txt">
+                        <h1>Igatta Group</h1>
+                        <h2>新卒採用サイト</h2>
+                    </div>
+                </a>
+            </div>
             <div class="header__nav">
                 <div id="hamburgerBtn">
                     <span></span>
@@ -33,10 +43,11 @@
                 <nav id="hamburgerMenu">
                     <div id="hamburgerMenuList">
                         <ul>
-                            <li><a class="hamburgerLink" href="#">Top</a></li>  
-                            <li><a class="hamburgerLink" href="#">About</a></li>  
-                            <li><a class="hamburgerLink" href="#">Service</a></li>  
-                            <li><a class="hamburgerLink" href="#">Contact</a></li>  
+                            <li><a class="hamburgerLink" href="#">Mission&Vision</a></li>  
+                            <li><a class="hamburgerLink" href="#">Message</a></li>  
+                            <li><a class="hamburgerLink" href="#">Job List</a></li>  
+                            <li><a class="hamburgerLink" href="#">MY PAGEはこちら</a></li>  
+                            <li><a class="hamburgerLink" href="#">エントリーはこちら</a></li>  
                         </ul>
                     </div>
                 </nav>
