スクロールヘッダー

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
             </div>
         </div>
     </header>
+    <div style="height:100vh;background-color: aliceblue;">aaa</div>
+    <div style="height:100vh;background-color:aquamarine;">bbb</div>
+    <div style="height:100vh;background-color:bisque;">ccc</div>
+    <div style="height:100vh;background-color:aquamarine;">bbb</div>
+    <div style="height:100vh;background-color:bisque;">ccc</div>
+
     <!-- scripts -->
     <script src="./assets/js/main.js"></script>
 </body>
