--- a/index.html
+++ b/index.html
@@ -46,14 +46,22 @@
                             <li><a class="hamburgerLink" href="#">Mission&Vision</a></li>  
                             <li><a class="hamburgerLink" href="#">Message</a></li>  
                             <li><a class="hamburgerLink" href="#">Job List</a></li>  
-                            <li><a class="hamburgerLink" href="#">MY PAGEはこちら</a></li>  
-                            <li><a class="hamburgerLink" href="#">エントリーはこちら</a></li>  
+                            <li>
+                                <a href="#" class="btn btn__secondary">MY PAGEはこちら</a>
+                            </li>  
+                            <li>
+                                <a href="#" class="btn btn__primary">エントリーはこちら</a>
+                            </li>  
                         </ul>
                     </div>
                 </nav>
             </div>
         </div>
     </header>
+    <a href="#" class="btn btn__secondary">MY PAGEはこちら</a>
+    <br>
+    <a href="#" class="btn btn__primary">エントリーはこちら</a>
+
     <div style="height:100vh;background-color: aliceblue;">aaa</div>
     <div style="height:100vh;background-color:aquamarine;">bbb</div>
     <div style="height:100vh;background-color:bisque;">ccc</div>
