--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
                 </a>
             </div>
             <div class="header__nav">
+                <nav class="globalMenu">
+                    <ul class="globalMenuList">
+                        <li class="globalMenuList__item">
+                            <a class="hamburgerLink" href="#">Mission&Vision</a>
+                        </li>
+                        <li class="globalMenuList__item">
+                            <a class="hamburgerLink" href="#">Message</a>
+                        </li>
+                        <li class="globalMenuList__item">
+                            <a class="hamburgerLink" href="#">Job List</a>
+                        </li>
+                        <li class="globalMenuList__item">
+                            <a href="#" class="btn btn__secondary">MY PAGEはこちら</a>
+                        </li>
+                        <li class="globalMenuList__item">
+                            <a href="#" class="btn btn__primary">エントリーはこちら</a>
+                        </li>
+                    </ul>
+                </nav>
                 <div id="hamburgerBtn">
                     <span></span>
                     <span></span>
