ファーストビュー作成

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
             </nav>
         </div>
     </header>
-    <!---->
     <div id="fixedHeader">
         <div class="container header__container">
             <div class="header__ttl">
@@ -108,8 +107,22 @@
             </nav>
         </div>
     </div>
-    <!---->
 
+    <section class="firstVisual">
+        <div class="firstVisual__bg">
+        </div>
+        <figure class="firstVisual__ph">
+            <picture>
+                <source media="(max-width: 375px)" srcset="./assets/image/firstview-img01_sp.png">
+                <source media="(min-width: 376px)" srcset="./assets/image/firstview-img01_pc.png">
+                <img src="./assets/image/firstview-img01_pc.png" alt="ファーストビュー">
+            </picture>
+        </figure>
+        <figure class="firstVisual__caption">
+            <img class="isSp" src="./assets/image/firstview-message-sp.png" alt="最高に面白い仕事でこの世界を揺らせ。">
+            <img class="isPc" src="./assets/image/firstview-message.svg" alt="最高に面白い仕事でこの世界を揺らせ。">
+        </figure>
+    </section>
 
     <main class="main">
         <div class="container">
