社長メッセージ作成

--- a/index.html
+++ b/index.html
@@ -165,6 +165,46 @@
                     </ul>
                 </div>
             </section>
+            <section class="section" id="CeoMessage">
+                <h2 class="section__ttl">
+                    <figure class="section__ttl--sub">
+                        <img src="./assets/image/Message.png" alt="社長メッセージ">
+                    </figure>
+                    <p class="section__ttl--main">社長メッセージ</p>
+                </h2>
+                <div class="section__container">
+                    <div class="container">
+                        <h3 class="ceomessage__ttl">技術革新をも乗りこなし、<br class="isSp">未来を切り拓け</h3>
+                        <p class="ceomessage__txt">
+                            Igatta Groupのルーツは、1990年代初頭のインターネット黎明期の頃にさかのぼります。<br>
+                            まだWebマーケティングという言葉が一般に知れ渡る前に「この先の時代、インターネットでの集客がメインになるはず！」と当時大手印刷会社に努めていた私はIgatta Groupの創業を決めます。<br>
+                            しかし、当初は荒波の連続でした。なにせ「チラシ」と「ポスター」で集客をしていた時代です。「ネットで集客なんてできるの？」という懐疑的な声を沢山いただき、クライアント先に営業をするたびにお断りを頂いておりました。「何か怪しいもの」と捉えられていたのです。<br>
+                            しかし、1999年にとある町工場のサイトを弊社が公開した後に、その町工場はBBCなどで世界的に取り上げられることになります。<br>
+                            日本への取材前にWebブラウジングしていたBBC記者が、弊社作のサイトを偶然見つけたのです。サイト内では「クライアントの魅力を伝える」ことを徹底したため、それが伝わったのだと思います。<br>
+                            これにより国内でも大きな話題となり、大手企業を中心に受注をいただくことになりました。<br>
+                            挑戦で成長してきた会社です。みなさんの熱い応募、お待ちしています。
+                        </p>
+                    </div>
+                    <div class="ceoname__container">
+                        <p class="ceoname__txt">代表取締役社長</p>
+                        <figure class="ceoname__img">
+                            <img src="./assets/image/ceo-name.png" alt="三浦吉茂">
+                        </figure>
+                    </div>
+                </div>
+            </section>
+
+
+
+            <section class="section" id="">
+                <h2 class="section__ttl">
+                    <figure class="section__ttl--sub">
+                        <img src="./assets/image/" alt="">
+                    </figure>
+                    <p class="section__ttl--main"></p>
+                </h2>
+                <div class="section__container container"></div>
+            </section>
             <div style="height:100vh;background-color: aliceblue;">aaa</div>
             <div style="height:100vh;background-color:aquamarine;">bbb</div>
             <div style="height:100vh;background-color:bisque;">ccc</div>
